kubectl-files/imagery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: imagery-worker
  name: imagery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: imagery-worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/network: "true"
        io.kompose.service: imagery-worker
    spec:
      containers:
        - args:
            - celery
            - worker
            - -A
            - worker.imagery
            - -P
            - threads
            - --loglevel=INFO
            - --queues=imagery
          image: gcr.io/tcc-lucas-pierre/imagery_worker
          name: celery-imagery
          resources: {}
          volumeMounts:
            - mountPath: /workers/data
              name: imagery-worker-claim0
      restartPolicy: Always
      volumes:
        - name: imagery-worker-claim0
          persistentVolumeClaim:
            claimName: imagery-worker-claim0
status: {}
