kubectl-files/inference-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: inference-worker
  name: inference-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: inference-worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/network: "true"
        io.kompose.service: inference-worker
    spec:
      containers:
        - args:
            - celery
            - worker
            - -A
            - worker.inference
            - -P
            - threads
            - --loglevel=INFO
            - --queues=inference
          image: gcr.io/tcc-lucas-pierre/inference_worker
          name: celery-inference
          resources: {}
      restartPolicy: Always
status: {}
