kubectl-files/localstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: localstack
  name: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: localstack
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/network: "true"
        io.kompose.service: localstack
    spec:
      containers:
        - env:
            - name: DATA_DIR
              value: /tmp/localstack/data
            - name: SERVICES
              value: s3
          image: localstack/localstack:0.12.13
          name: localstack
          resources: {}
          volumeMounts:
            - mountPath: /tmp/localstack
              name: localstack-claim0
      restartPolicy: Always
      volumes:
        - name: localstack-claim0
          persistentVolumeClaim:
            claimName: localstack-claim0
status: {}
