kubectl-files/localstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: localstack
  name: localstack
spec:
  ports:
    - name: "4566"
      port: 4566
      targetPort: 4566
  selector:
    io.kompose.service: localstack
status:
  loadBalancer: {}
